--- a/cnf/iddb.conf
+++ b/cnf/iddb.conf
@@ -6,7 +6,7 @@ title = "TOML Example"
 
 mysql_user="root"
 mysql_passwd="123456"
-mysql_db = "test"
+mysql_db = "iddb"
 mysql_ip_port = "127.0.0.1:3306"
 
 [Cluster]
